--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,12 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Enrutamiento de Gateway (Balanceador)
 # application.yml o
-spring.cloud.gateway.routes[0].id=micro-productos
-spring.cloud.gateway.routes[0].uri=lb://micro-productos
-spring.cloud.gateway.routes[0].predicates=Path=/v1/productos/**
-spring.cloud.gateway.routes[0].filters=StripPrefix=2
+#spring.cloud.gateway.routes[0].id=micro-productos
+#spring.cloud.gateway.routes[0].uri=lb://micro-productos
+#spring.cloud.gateway.routes[0].predicates=Path=/v1/productos/**
+#spring.cloud.gateway.routes[0].filters=StripPrefix=2
 
-spring.cloud.gateway.routes[1].id=micro-items
-spring.cloud.gateway.routes[1].uri=lb://micro-items
-spring.cloud.gateway.routes[1].predicates=Path=/v1/items/**
-spring.cloud.gateway.routes[1].filters=StripPrefix=2
+#spring.cloud.gateway.routes[1].id=micro-items
+#spring.cloud.gateway.routes[1].uri=lb://micro-items
+#spring.cloud.gateway.routes[1].predicates=Path=/v1/items/**
+#spring.cloud.gateway.routes[1].filters=StripPrefix=2
