configurando filter personlizado de una 2da forma

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,7 @@ spring:
             - Path=/v1/productos/**
           filters:
             - StripPrefix=2
-            - name: Example
-              args:
-                message: Este es un mensaje personalizado para filter factory
-                cookieName: usuario
-                cookieValue: IsaiasMorochi
+            - ExampleCookie=Este es un mensaje personalizado para filter factory, usuario, IsaiasMorochi
         - id: micro-items
           uri: lb://micro-items
           predicates:
